<resources>
    <string name="app_name">HW3</string>
    <string name="battle_profile_info_points">Puan</string>
    <string name="battle_profile_info_amount">700</string>
    <string name="battle_profile_info_level">Level 15</string>
    <string name="battle_multi">İki Oyuncu</string>
    <string name="battle_single">Tek Oyuncu</string>
    <string name="play_now">Şimdi Oyna</string>
    <string name="empty_state">Empty State Title</string>
    <string name="empty_state_sub">Empty state sub word</string>
    <string name="profile">Profile</string>
    <string name="decklerim">Decklerim</string>
    <string name="battle">Battle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_is_decky">decky nedir?</string>
    <string name="user_name">John Doe</string>
</resources>