<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BattleFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/battle_background"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/splash_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline1"
        app:layout_constraintGuide_end="20dp"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/battle_profile_info_height"
        android:layout_marginStart="@dimen/battle_multi_text_margin_end"
        android:layout_marginEnd="@dimen/battle_multi_text_margin_end"
        android:layout_marginTop="@dimen/battle_profile_info_margin"
        android:elevation="10dp"
        app:cardCornerRadius="@dimen/battle_profile_info_radius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/battle_profile_info_crown_left_margin"
            android:src="@drawable/ic_battle_crown" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/BattleProfileInfoBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/battle_profile_info_points_left_margin"
            android:layout_marginTop="@dimen/battle_profile_info_points_margin"
            android:text="@string/battle_profile_info_amount" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/BattleProfileInfoRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/battle_profile_info_points_left_margin"
            android:layout_marginBottom="@dimen/battle_profile_info_points_margin"
            android:text="@string/battle_profile_info_points" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="124dp"
            android:src="@drawable/ic_battle_star" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/BattleProfileInfoLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/battle_profile_info_level_margin"
            android:layout_marginEnd="@dimen/battle_profile_info_points_left_margin"
            android:text="@string/battle_profile_info_level" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="89dp"
            android:layout_height="0dp"
            android:layout_gravity="end|top"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="35dp"
            android:progress="50"
            app:indicatorColor="@color/progress_foreground"
            app:trackColor="@color/progress_background"
            app:trackCornerRadius="100dp"
            app:trackThickness="8dp" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/battle_multi_art_start_margin"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:src="@drawable/ic_battle_multi"
        android:layout_marginTop="130dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        style="@style/BattleMulti"
        android:layout_marginBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/battle_multi"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toStartOf="@id/guideline1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/progress_foreground"
        app:cardElevation="0dp"
        app:cardCornerRadius="@dimen/card_radius"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline1">

        <TextView
            style="@style/PlayNowWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/play_now" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginEnd="@dimen/battle_multi_text_margin_end"
            android:src="@drawable/ic_rightarrow_white" />

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:src="@drawable/ic_battle_single"
        android:layout_marginTop="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        style="@style/BattleSingle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/battle_single"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="180dp"
        android:layout_height="50dp"
        app:cardCornerRadius="200dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
        android:layout_marginTop="15dp"
        app:cardElevation="0dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/single_play_now" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_now"
            style="@style/PlayNowDark"
            android:layout_gravity="center" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:src="@drawable/ic_rightarrow_black"
            android:layout_marginEnd="@dimen/battle_multi_text_margin_end" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>